feat: Add Custom Exception Handling